test/scc/ext/tm/semantic-errors/000.t
extern void foo() _Transaction_safe;
extern void foo();